# topic-classifier

./: .gitignore  .vercelignore  Classifier.py  ModelLocalServer.py  README.md  init_db.py  physics_spec.json  pyproject.toml  render.yaml  requirements.txt  sessionDatabase.py  start.ps1  subtopicsBuilder.py  topics.json
Backend/: .env.example  auth.py  database.py  embedding_cache.py  init_db.py  main.py  migrate_add_spec_fields.py  requirements.txt  seed_specs.py  seed_test_user.py  sessionDatabase.py  specJSONgenerator.py  subtopicsBuilder.py  topics.json  topics_renamed.json
deploy/: Caddyfile  DEPLOY.md  deploy.sh  setup.sh  topic-tracker.service
frontend/: .env.production  package-lock.json  package.json  svelte.config.js  vercel.json  vite.config.ts
paper_scraper/: DISCLAIMER.md  README.md  __init__.py  __main__.py  _find_algolia_codes.py  aqa_config.py  aqa_scraper.py  config.py  downloader.py  edexcel_config.py  edexcel_scraper.py  ocr_config.py  ocr_scraper.py  populate_db.py  pyproject.toml  scraper.py
paper_scraper/paper_scraper/: __init__.py  aqa_config.py  aqa_scraper.py  downloader.py  edexcel_scraper.py  ocr_config.py  ocr_scraper.py  populate_db.py
pdf interpretation/: pdfOCR.py
pdf_interpretation/: FURTHER_MATHS-RAW.JSON  ShortExam.md  eqInterpretation.py  exam.md  llmParser.py  markdownParser.py  olmocr_health.py  pdfOCR.py  questionLocator.py  regexParser.py  test.md  utils.py  work_index_list.csv.zstd
spec_generation/: 8464.json  Additional_Mathematics_OCR_6993.json  Biology_AQA_7402.json  Biology_AQA_8461.json  Biology_Edexcel_1BI0.json  (+43 more)
(+50 files in other folders)
